// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders without error with admin user 1`] = `
<div>
  <div
    style="margin-top: 12px;"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Luo uusi vierailu
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Varaukset
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Lisävalinnat
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Lomakkeet
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Ryhmät
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Vierailulista
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          csv
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="control"
        >
          <button
            class="button luma"
          >
            Käyttäjälista
          </button>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <div
          class="control"
        >
          <button
            class="button luma"
          >
            Sähköpostit
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders without error with empty user 1`] = `
<div>
  <div />
</div>
`;

exports[`Renders without error with user 1`] = `
<div>
  <div
    style="margin-top: 12px;"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Luo uusi vierailu
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Varaukset
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Lisävalinnat
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Lomakkeet
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Ryhmät
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          Vierailulista
        </button>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <button
          class="button luma"
        >
          csv
        </button>
      </div>
    </div>
  </div>
</div>
`;
